# eudract-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: cron.yml  doc.yml  documentation.yml  main.yml  publish.yml  python-package.yml  tests.yml
1.1.10/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  search.html
1.1.10/_sources/: reference.rst.txt
1.1.9/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
1.2.0/: .buildinfo  examples.html  genindex.html  index.html  install.html  objects.inv  search.html
1.2.0/_sources/: index.rst.txt
1.3.0/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  search.html  searchindex.js
1.3.0/_sources/: changelog.md.txt
docs/: index.html
docs/source/: conf.py  examples.md  index.rst  install.md
eudract/: __init__.py  main.py  schema.py  utils.py
tests/: test_basic.py  test_main.py  test_utils.py
tests/data/: full.json  one_study_full.json  one_study_full.txt  one_study_summary.json  one_study_summary.txt
